Added test coverage API suite, updated readme to reflect

--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "kill-ports": "fuser -k 3001/tcp 5173/tcp 2>/dev/null || true",
     "dev": "pnpm kill-ports && concurrently \"pnpm --filter api dev\" \"pnpm --filter web dev\"",
     "build": "pnpm -r build",
-    "test": "jest",
-    "test:coverage": "jest --coverage",
+    "test": "pnpm --filter api test",
     "lint": "eslint . --ext .ts,.tsx",
     "lint:fix": "eslint . --ext .ts,.tsx --fix",
     "format": "prettier --write \"**/*.{ts,tsx,json,md}\"",
